<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Учёт топлива</string>
    <string name="title_calc">Калькулятор</string>
    <string name="title_prefs">Настройки</string>
    <string name="title_backup">Резервная копия</string>
    <string name="title_about">О программе</string>
    <string name="title_yandex_map">Расстояние</string>
    <string name="title_yandex_map_subtitle">Время в пути</string>
    <string name="title_chart_cost">График расходов</string>
    <string name="title_chart_cost_subtitle">Сумма стоимости по месяцам</string>
    <string name="title_message_error">Ошибка</string>
    <string name="about_version">Версия %s</string>
    <string name="about_copyright">© П3тр0виЧъ</string>
    <string name="about_disclaimer">
        Приложение предоставляется на основе принципов «КАК ЕСТЬ» без каких-либо гарантий,
        то есть вы используете его на собственный риск и соглашаетесь с тем, что разработчик данного приложения
        не несёт никакой ответственности перед вами за какой-либо ущерб, включая потерю данных.
    </string>
    <string name="action_list">Учёт топлива</string>
    <string name="action_calc">Калькулятор</string>
    <string name="action_chart_cost">График расходов</string>
    <string name="action_backup">Резервная копия</string>
    <string name="action_settings">Настройки</string>
    <string name="action_about">О программе</string>
    <string name="action_save">Сохранить</string>
    <string name="action_done">Готово</string>
    <string name="action_done_all">Готово ×2</string>
    <string name="action_update">Изменить</string>
    <string name="action_delete">Удалить</string>
    <string name="action_dates_start_of_year">Начало года</string>
    <string name="action_dates_end_of_year">Конец года</string>
    <string name="action_dates_winter">Зима</string>
    <string name="action_dates_summer">Лето</string>
    <string name="action_dates_curr_year">Текущий год</string>
    <string name="action_dates_prev_year">Прошлый год</string>
    <string name="list_item_date" translatable="false">29 марта 1981 г.</string>
    <string name="list_item_cost" translatable="false">500</string>
    <string name="list_item_volume" translatable="false">16.37</string>
    <string name="list_item_total" translatable="false">12345</string>
    <string name="btn_date" translatable="false">29/03/1981</string>
    <string name="text_date">Дата</string>
    <string name="text_cost">Стоимость</string>
    <string name="text_volume">Объём</string>
    <string name="text_total">Пробег</string>
    <string name="text_price">Цена топлива</string>
    <string name="text_distance">Расстояние</string>
    <string name="text_consumption">Расход</string>
    <string name="text_total_average">Средний расход</string>
    <string name="text_total_sum_cost">Сумма стоимости</string>
    <string name="text_total_last_cons">Расход за посл. поездку</string>
    <string name="text_total_estimated_mileage">Предп. пробег</string>
    <string name="text_total_estimated_total">Предп. общий пробег</string>
    <string name="text_sum">∑</string>
    <string name="text_median">m̅</string>
    <string name="text_average">x̅</string>
    <string name="text_backup_directory">Расположение файла</string>
    <string name="text_backup_file">Имя файла</string>
    <string name="text_empty_price">Укажите стоимость литра топлива</string>
    <string name="text_empty_cons">Укажите расход топлива</string>
    <string name="text_empty_distance">Укажите начальную и конечную точку маршрута</string>
    <string name="text_no_data">Нет записей</string>
    <string name="text_error_webview">Ошибка: %s</string>
    <string name="text_notification_sms_title">Оплата топлива</string>
    <string name="text_notification_sms_text">Стоимость %1$s, объём %2$s</string>
    <string name="text_notification_sms_channel_name">Оплата топлива</string>
    <string name="text_sms_text">Пример сообщения</string>
    <string name="text_sms_text_pattern">Шаблон сообщения</string>
    <string name="text_sms_text_result_all_empty">Задайте шаблон сообщения и пример для проверки шаблона</string>
    <string name="text_sms_text_result_pattern_empty">Задайте шаблон сообщения</string>
    <string name="text_sms_text_result_message_empty">Задайте пример сообщения</string>
    <string name="text_sms_text_result_wrong_pattern">Ошибка в шаблоне сообщения</string>
    <string name="text_sms_text_result_ok">Сообщение соответствует шаблону (%s)</string>
    <string name="text_sms_text_result_no_value">Сообщение не соответствует шаблону</string>
    <string name="dialog_caption_add">Новая запись</string>
    <string name="dialog_caption_update">Изменение записи</string>
    <string name="dialog_caption_load_from_xml">Загрузить данные из файла?</string>
    <string name="dialog_caption_auth">Использовать Яндекс.Диск для синхронизации?</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_cancel">ОТМЕНА</string>
    <string name="dialog_btn_done">ГОТОВО</string>
    <string name="dialog_btn_load">ЗАГРУЗИТЬ</string>
    <string name="dialog_btn_agree">СОГЛАСЕН</string>
    <string name="dialog_btn_disagree">НЕТ</string>
    <string name="btn_backup_save">Сохранить</string>
    <string name="btn_backup_load">Загрузить</string>
    <string name="btn_calc_map">Подсчитать на Яндекс.Картах</string>
    <string name="message_dialog_load_from_xml">Имеющиеся в базе данных записи будут безвозвратно удалены.</string>
    <string name="message_dialog_load_from_xml_sync">Имеющиеся в базе данных записи будут безвозвратно
        удалены.\nТакже, после синхронизации, данные будут удалены на остальных устройствах.</string>
    <string name="message_dialog_auth">Сейчас будет открыта страница авторизации Яндекса,
        на которой нужно войти в сервисы Яндекса, после чего разрешить доступ.\nВ случае отказа
        синхронизация выполняться не будет.\nПри положительном выборе, приложение «Учёт топлива»
        получит доступ только к файлам, находящимся на Яндекс.Диске в папке приложения «Учёт топлива».
        Приложение не получает доступа к остальным файлам, хранящимся на Яндекс.Диске,
        не получает имя пользователя и пароль, а также не получает доступа к остальным
        сервисам Яндекса.</string>
    <string name="message_progress_save">Подождите, выполняется сохранение в файл…</string>
    <string name="message_progress_load">Подождите, выполняется чтение файла…</string>
    <string name="message_record_deleted">Запись удалена</string>
    <string name="message_yandex_map_geolocation_in_progress">Местоположение определяется…</string>
    <string name="message_error_mkdirs">Не удалось создать каталог\n\"%s\"</string>
    <string name="message_error_dir_not_exists">Каталог \"%s\" не существует</string>
    <string name="message_error_file_not_exists">Файл \"%1$s\" в каталоге \"%2$s\" не существует</string>
    <string name="message_error_create_xml">Не удалось перевести записи из базы данных в формат XML</string>
    <string name="message_error_parse_xml">Неверный формат файла</string>
    <string name="message_error_read_file">Не удалось прочитать файл</string>
    <string name="message_error_create_file">Не удалось создать файл \"%1$s\" в каталоге \"%2$s\"</string>
    <string name="message_error_save_file">Не удалось сохранить файл \"%1$s\" в каталоге \"%2$s\"</string>
    <string name="message_error_yandex_map_search_point">Маршрутная точка не найдена</string>
    <string name="message_error_yandex_map_route">Не удалось построить маршрут</string>
    <string name="message_error_yandex_disk_browser_open">Не удалось открыть Яндекс.Диск</string>
    <string name="message_error_yandex_map_geolocation">Не удалось определить текущее местоположение</string>
    <string name="message_error_no_internet">Отсутствует подключение к Интернет</string>
    <string name="message_error_no_contacts_activity">Приложение для выбора контакта не найдено</string>
    <string name="message_error_insert_record">Во время добавления записи произошла ошибка</string>
    <string name="message_error_update_record">Во время обновления записи произошла ошибка</string>
    <string name="message_error_delete_record">Во время удаления записи произошла ошибка</string>
    <string name="message_need_permission_to_storage">Для сохранения или загрузки резервной копии необходим доступ к внешнему хранилищу</string>
    <string name="message_need_permission_to_location">Для определения местоположения необходимо предоставить разрешение</string>
    <string name="message_save_file_ok">Файл сохранён</string>
    <string name="message_load_file_ok">Данные из файла загружены</string>
    <string name="yandex_map_map_center_title">Яндекс.Карты</string>
    <string name="yandex_map_empty_geocode">Нет данных</string>
    <string name="yandex_map_start_search_control_placeholder_content">Адрес начала маршрута</string>
    <string name="yandex_map_finish_search_control_placeholder_content">Адрес конца маршрута</string>
    <string name="year_current">Текущий год</string>
    <string name="year_all">Все записи</string>
    <string name="date_filter">Период</string>
    <string-array name="filter_dates">
        <item>@string/year_current</item>
        <item>@string/date_filter</item>
        <item>@string/year_all</item>
    </string-array>
    <string name="city">Город</string>
    <string name="highway">Трасса</string>
    <string name="mixed">Смешанный</string>
    <string-array name="spinner_consumption">
        <item>@string/city</item>
        <item>@string/highway</item>
        <item>@string/mixed</item>
    </string-array>
    <string name="summer">Лето</string>
    <string name="winter">Зима</string>
    <string-array name="spinner_season">
        <item>@string/summer</item>
        <item>@string/winter</item>
    </string-array>
    <string name="units_km">км</string>
    <string name="units_hours">ч.</string>
    <string name="units_minutes">мин.</string>
    <string name="shortcut_add_record_disabled_message">disabled</string>
    <string name="shortcut_add_record_long_label">Добавить запись</string>
    <string name="shortcut_add_record_short_label">Добавить</string>
    <string name="pref_price">Стоимость топлива</string>
    <string name="pref_price_empty">Не указана</string>
    <string name="pref_def_title">Заправка по умолчанию</string>
    <string name="pref_def_summary">Значение стоимости или объёма для новых записей</string>
    <string name="pref_def_cost">Стоимость</string>
    <string name="pref_def_cost_empty">Не указана</string>
    <string name="pref_def_cost_calc">Вычисляется на основе объёма</string>
    <string name="pref_def_volume">Объём</string>
    <string name="pref_def_volume_empty">Не указан</string>
    <string name="pref_def_volume_calc">Вычисляется на основе стоимости</string>
    <string name="pref_cons_title">Расход топлива</string>
    <string name="pref_cons_summary">Расход топлива в различных режимах</string>
    <string name="pref_summary_summer">Настройка расхода летом</string>
    <string name="pref_summary_summer_city">Расход летом в городе</string>
    <string name="pref_summary_summer_highway">Расход летом на трассе</string>
    <string name="pref_summary_summer_mixed">Расход летом в смешанном режиме</string>
    <string name="pref_summary_winter">Настройка расхода зимой</string>
    <string name="pref_summary_winter_city">Расход зимой в городе</string>
    <string name="pref_summary_winter_highway">Расход зимой на трассе</string>
    <string name="pref_summary_winter_mixed">Расход зимой в смешанном режиме</string>
    <string name="pref_yandex_map_title">Яндекс.Карты. Начало маршрута</string>
    <string name="pref_sync_title">Синхронизация</string>
    <string name="pref_sync_summary_on">Включена</string>
    <string name="pref_sync_summary_off">Выключена</string>
    <string name="pref_sync_enabled_on">Включена</string>
</resources>