<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="Summer"
        android:summary="@string/pref_summary_summer"
        android:title="@string/summer">

        <EditTextPreference
            android:key="@string/pref_summer_city"
            android:summary="@string/pref_summary_summer_city"
            android:title="@string/city"
            android:positiveButtonText="@string/dialog_btn_done"
            android:negativeButtonText="@string/dialog_btn_cancel"
            android:imeOptions="flagNoExtractUi"
            android:inputType="numberDecimal">
        </EditTextPreference>
        <EditTextPreference
            android:key="@string/pref_summer_highway"
            android:summary="@string/pref_summary_summer_highway"
            android:title="@string/highway"
            android:positiveButtonText="@string/dialog_btn_done"
            android:negativeButtonText="@string/dialog_btn_cancel"
            android:imeOptions="flagNoExtractUi"
            android:inputType="numberDecimal">
        </EditTextPreference>
        <EditTextPreference
            android:key="@string/pref_summer_mixed"
            android:summary="@string/pref_summary_summer_mixed"
            android:title="@string/mixed"
            android:positiveButtonText="@string/dialog_btn_done"
            android:negativeButtonText="@string/dialog_btn_cancel"
            android:imeOptions="flagNoExtractUi"
            android:inputType="numberDecimal">
        </EditTextPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="Winter"
        android:summary="@string/pref_summary_winter"
        android:title="@string/winter">

        <EditTextPreference
            android:key="@string/pref_winter_city"
            android:summary="@string/pref_summary_winter_city"
            android:title="@string/city"
            android:positiveButtonText="@string/dialog_btn_done"
            android:negativeButtonText="@string/dialog_btn_cancel"
            android:imeOptions="flagNoExtractUi"
            android:inputType="numberDecimal">
        </EditTextPreference>
        <EditTextPreference
            android:key="@string/pref_winter_highway"
            android:summary="@string/pref_summary_winter_highway"
            android:title="@string/highway"
            android:positiveButtonText="@string/dialog_btn_done"
            android:negativeButtonText="@string/dialog_btn_cancel"
            android:imeOptions="flagNoExtractUi"
            android:inputType="numberDecimal">
        </EditTextPreference>
        <EditTextPreference
            android:key="@string/pref_winter_mixed"
            android:summary="@string/pref_summary_winter_mixed"
            android:title="@string/mixed"
            android:positiveButtonText="@string/dialog_btn_done"
            android:negativeButtonText="@string/dialog_btn_cancel"
            android:imeOptions="flagNoExtractUi"
            android:inputType="numberDecimal">
        </EditTextPreference>
    </PreferenceCategory>
</PreferenceScreen>