<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="@string/pref_def_cost"
        android:summary="@string/pref_summary_cost"
        android:title="@string/text_cost"
        android:positiveButtonText="@string/dialog_btn_done"
        android:negativeButtonText="@string/dialog_btn_cancel"
        android:imeOptions="flagNoExtractUi"
        android:inputType="numberDecimal">
    </EditTextPreference>
    <EditTextPreference
        android:key="@string/pref_def_volume"
        android:summary="@string/pref_summary_volume"
        android:title="@string/text_volume"
        android:positiveButtonText="@string/dialog_btn_done"
        android:negativeButtonText="@string/dialog_btn_cancel"
        android:imeOptions="flagNoExtractUi"
        android:inputType="numberDecimal">
    </EditTextPreference>
</PreferenceScreen>