<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityMain">

    <item
        android:id="@+id/action_average"
        android:icon="@drawable/ic_function_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_average"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_calc"
        android:icon="@drawable/ic_calculator_white_24dp"
        android:orderInCategory="200"
        android:title="@string/action_calc"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:orderInCategory="300"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_backup"
        android:icon="@drawable/ic_archive_black_24dp"
        android:orderInCategory="400"
        android:title="@string/action_backup"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_help_circle_black_24dp"
        android:orderInCategory="500"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
