<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:descendantFocusability="blocksDescendants"
                android:orientation="horizontal"
                android:paddingEnd="16dp"
                android:paddingStart="16dp">

    <TextView
        android:id="@+id/text_date"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/space_btn_menu"
        android:clickable="false"
        android:gravity="center_vertical"
        android:text="@string/text_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_date"
        android:layout_marginLeft="16dp"
        android:layout_toLeftOf="@+id/space_btn_menu"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_cost"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

        <TextView
            android:id="@+id/text_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_volume"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

        <TextView
            android:id="@+id/text_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_total"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
    </LinearLayout>

    <Space
        android:id="@+id/space_btn_menu"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"/>
</RelativeLayout>