<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ltMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/ltTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageAbout"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="start|center"
            android:scaleType="center"
            android:src="@mipmap/ic_launcher_72dp"
            tools:ignore="contentDescription"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/textAboutAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/imageAbout"
            android:gravity="start"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textAboutVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textAboutAppName"
            android:layout_below="@+id/textAboutAppName"
            android:text="@string/about_version"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <TextView
            android:id="@+id/textAboutDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textAboutAppName"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@+id/textAboutVersion"
            android:text="@string/list_item_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <TextView
            android:id="@+id/textAboutCopyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_alignStart="@+id/textAboutAppName"
            android:layout_below="@+id/textAboutVersion"
            android:layout_marginTop="8dp"
            android:text="@string/about_copyright"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/view"
            style="@style/AppTheme.Divider.Horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textAboutDisclaimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal"
            android:text="@string/about_disclaimer"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>